--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>#1 Rated Drain Cleaning Services Farrell Plumbing</title>
     <meta charset="UTF-8" />
     <link href="styles.css" rel="stylesheet" />
-    
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
 
   <header>
