--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       
     </div>
       <footer class="FootDecor">
-          <img src="assets\images\TextLogo.svg" width="10%" />
+          <img class="footimg" src="assets\images\TextLogo.svg" />
           <h3 class="footer">6840 Commerce Ave, Port Richey, FL 34668 <br></br> LIC #CFC1430362</h3>
           <div class="ButtonContainer">
             <h3>Check us out on Facebook!</h3>
