--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="PlumberThree">
             <img class="PlumberHeadshot" src="assets\images\JustinLeadPages.png">
             <h3>Justin</h3>
-            <h4>Service Mannager</h4>
+            <h4>Service Manager</h4>
             <p>Justin, who joined Farrell Plumbing in 2016, is the service manager, known for his exceptional skill set and cheerful personality. His leadership ensures every plumbing job is handled with the highest level of care and professionalism!</p>
           </div>
         </div>
