--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
       </div>
-      <a class="anchorButton" href="tel:7278424663">CALL NOW <br class="br"></br>#7278424663</a>
+      <a class="anchorButton" href="tel:7278424663">CALL NOW <br class="br"></br>7278424663</a>
     
       <div class="PageFour">
           <h1 class="contactNOW">CONTACT US NOW</h1>
