--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <ul class="PageOneList">
       <li>Free Estimates</li>
       <li>Same Day Service</li>
-      <li>Satisfaction Guaranteed</li>
+      <li>100% Satisfaction Guaranteed</li>
       <li>Quality Craftmanship</li>
       <li>Warranty On All Work</li>
     </ul>
@@ -75,17 +75,17 @@
       <div class="ReviewsContainer">
         <div class="ReviewOne">
           <p class="ReviewDescription">“Farrell Plumbing did an outstanding job. Ryan and Matt were extremely professional and their services, fees, and quality are outstanding. I would highly recommend Farrell Plumbing.”</p>
-          <p class="ReviewName">-Test</p>
+          <p class="ReviewName">- Joseph</p>
           <img class="GReview" src="assets\images\GoogleLogo.png">
         </div>
         <div class="ReviewTwo">
           <p class="ReviewDescription">“Our plumber Zach was great! He did a great job with our installation and was very knowledgeable when answering questions I had. I would recommend Farrell with any of your plumbing needs!”</p>
-          <p class="ReviewName">-Test</p>
+          <p class="ReviewName">- Lisa</p>
           <img class="GReview" src="assets\images\GoogleLogo.png">
         </div>
         <div class="ReviewThree">
           <p class="ReviewDescription">“Adam was recommended to us and he did not disappoint. Helped us pick the perfect toilet and installed in a flash. The whole company is very customer friendly.”</p>
-          <p class="ReviewName">-Test</p>
+          <p class="ReviewName">- Dawn</p>
           <img class="GReview" src="assets\images\GoogleLogo.png">
         </div>
       </div>
