--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link href="styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    
+    <meta name="robots" content="noindex, nofollow">
   </head>
 
   <header>
