--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h3 class="NavHeadliner">#1 Rated Drain Cleaning Team in Trinity, FL</h3>
       <div class="ButtonContainer">
         <h3>SAME DAY SERVICE!</h3>
-        <a class="NavButton" href="tel:7278424663">CALL NOW <br></br>7278424663</a>
+        <a class="NavButton" href="tel:7278424663">CALL NOW <br></br>727-842-4663</a>
       </div>
     </nav>
   </header>
@@ -119,7 +119,7 @@
           </div>
         </div>
       </div>
-      <a class="anchorButton" href="tel:7278424663">CALL NOW <br class="br"></br>7278424663</a>
+      <a class="anchorButton" href="tel:7278424663">CALL NOW <br class="br"></br>727-842-4663</a>
     
       <div class="PageFour">
           <h1 class="contactNOW">CONTACT US NOW</h1>
