--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'AW-696165012');
 </script>
-    <title>#1 Rated Drain Cleaning Services Farrell Plumbing</title>
+    <title>#1-Rated Leak Detection Team Farrell Plumbing</title>
     <meta charset="UTF-8" />
     <link href="styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -21,7 +21,7 @@
     <nav class="Navigation">
       <img class="mainlogo" src="assets/images/TextLogo.svg" width="10%" />
 
-      <h3 class="NavHeadliner">#1 Rated Drain Cleaning Team in Trinity, FL</h3>
+      <h3 class="NavHeadliner">Same-Day Leak Detection – Call Now!</h3>
       <div class="ButtonContainer">
         <h3>SAME DAY SERVICE!</h3>
         <a class="NavButton" href="tel:7278424663" onclick="return gtag_report_conversion(this.href);">CALL NOW <br></br>727-842-4663</a>
@@ -35,7 +35,7 @@
      
 
     <div class="PageOneTitles">
-    <h1 class="Mainheader" id="Headliner">Your Local & Trusted Drain Cleaning Team</h1>
+    <h1 class="Mainheader" id="Headliner">Your Local & Trusted Leak Detection Team</h1>
     <h3 class="Subheader">#1 Rated Plumber in Trinity, FL</h3>
 
      
