--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="Navigation">
       <img class="mainlogo" src="assets/images/TextLogo.svg" width="10%" />
 
-      <h3 class="NavHeadliner">#1 Rated Drain Cleaning Team in Trinity, FL</h3>
+      <h3 class="NavHeadliner">#1 Rated Plumbing Team in Trinity, FL</h3>
       <div class="ButtonContainer">
         <h3>SAME DAY SERVICE!</h3>
         <a class="NavButton" href="tel:7278424663" onclick="return gtag_report_conversion(this.href);">CALL NOW <br></br>727-842-4663</a>
@@ -35,7 +35,7 @@
      
 
     <div class="PageOneTitles">
-    <h1 class="Mainheader" id="Headliner">Your Local & Trusted Drain Cleaning Team</h1>
+    <h1 class="Mainheader" id="Headliner">Your Local & Trusted Plumbing Team</h1>
     <h3 class="Subheader">#1 Rated Plumber in Trinity, FL</h3>
 
      
@@ -50,7 +50,7 @@
 
     <div class="ContactForm">
       <h1>Request a Quote</h1>
-      <p>Tell us about your plumbing issue and <b>claim 10% off</b> with this form.</p>
+      <p>Tell us about your plumbing issue and <b>claim 5% off</b> with this form.</p>
       <form action="https://api.web3forms.com/submit" method="POST">
         <input type="hidden" name="access_key" value="bc18e514-f834-4ddd-89d0-e5b6a4c4dfea">
         <input id="ContactName" type="name" name="Name" placeholder="Your First/Last Name*" required>
