--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'AW-696165012');
 </script>
-    <title>#1 Rated Drain Cleaning Services Farrell Plumbing</title>
+    <title>#1 Rated Plumbing Services Farrell Plumbing</title>
     <meta charset="UTF-8" />
     <link href="styles.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
