--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="ContactForm">
       <h1>Request a Quote</h1>
       <p>Tell us about your plumbing issue and <b>claim 10% off</b> with this form.</p>
-      <form action="https://api.web3forms.com/submit" method="POST">
+      <form action="https://api.web3forms.com/submit" method="POST" onsubmit="gtag_report_conversion();">
         <input type="hidden" name="access_key" value="bc18e514-f834-4ddd-89d0-e5b6a4c4dfea">
         <input id="ContactName" type="name" name="Name" placeholder="Your First/Last Name*" required>
         <input id="ContactEmail" type="email" name="Email" placeholder="Email*" required>
@@ -139,7 +139,7 @@
         <div class="BotContactForm">
           <h1>Request a Quote</h1>
           <p>Tell us about your plumbing issue and <b>claim 10% off</b> with this form.</p>
-          <form action="https://api.web3forms.com/submit" method="POST">
+          <form action="https://api.web3forms.com/submit" method="POST" onsubmit="gtag_report_conversion();">
             <input type="hidden" name="access_key" value="bc18e514-f834-4ddd-89d0-e5b6a4c4dfea">
             <input id="ContactName" type="name" name="Name" placeholder="Your First/Last Name*" required>
             <input id="ContactEmail" type="email" name="Email" placeholder="Email*" required>
